--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             </div>
             <!-- Ti -->
             <div class="question-group" data-question-id="Ti_Q1">
-                <p><strong>13. :</strong> I feel a strong need to analyze information or systems until I understand their underlying logic and ensure that understanding is precise and internally consistent.</p>
+                <p><strong>13. :</strong> I tend to be interested in how things work on the inside (like how a tool or a game is designed) and troubleshooting when things don't seem to operate logically.</p>
                  <div class="likert-options" id="Ti_Q1">
                     <label><input type="radio" name="Ti_Q1" value="1" required> <span class="likert-visual">1</span></label>
                     <label><input type="radio" name="Ti_Q1" value="2"> <span class="likert-visual">2</span></label>
@@ -196,7 +196,7 @@
                 </div>
             </div>
             <div class="question-group" data-question-id="Ti_Q2">
-                <p><strong>14. :</strong> I tend to be interested in how things work on the inside, like how a computer program or a game is designed.</p>
+                <p><strong>14. :</strong> I tend to completely disassociate myself from feelings or biases in my thinking.</p>
                  <div class="likert-options" id="Ti_Q2">
                      <label><input type="radio" name="Ti_Q2" value="1" required> <span class="likert-visual">1</span></label>
                      <label><input type="radio" name="Ti_Q2" value="2"> <span class="likert-visual">2</span></label>
@@ -209,7 +209,7 @@
             </div>
              <!-- Ti Reverse -->
              <div class="question-group" data-question-id="Ti_Q3">
-                <p><strong>15. :</strong> You tend to lack certainty in your own logical conclusions.</p>
+                <p><strong>15. :</strong> I tend to lack certainty in my own logical conclusions.</p>
                  <div class="likert-options" id="Ti_Q3">
                      <label><input type="radio" name="Ti_Q3" value="1" required> <span class="likert-visual">1</span></label>
                      <label><input type="radio" name="Ti_Q3" value="2"> <span class="likert-visual">2</span></label>
