--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                 </div>
             </div>
              <div class="question-group" data-question-id="Fe_Q2">
-                <p><strong>23. :</strong> I often try to make sure everyone in a group feels included and comfortable, especially if someone seems left out.</p>
+                <p><strong>23. :</strong> When deciding what to do or say, I strongly prioritize considering how my actions will affect the feelings and relationships of those around me.</p>
                  <div class="likert-options" id="Fe_Q2">
                     <label><input type="radio" name="Fe_Q2" value="1" required> <span class="likert-visual">1</span></label>
                     <label><input type="radio" name="Fe_Q2" value="2"> <span class="likert-visual">2</span></label>
