--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             </div>
              <!-- Fi -->
             <div class="question-group" data-question-id="Fi_Q1">
-                <p><strong>19. :</strong> You know what you believe and you stand by them strongly, even when others try to convince you otherwise.</p>
+                <p><strong>19. :</strong> I know what I believe and I stand by them strongly, even when others try to convince me otherwise.</p>
                  <div class="likert-options" id="Fi_Q1">
                     <label><input type="radio" name="Fi_Q1" value="1" required> <span class="likert-visual">1</span></label>
                     <label><input type="radio" name="Fi_Q1" value="2"> <span class="likert-visual">2</span></label>
