--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cosmic Mindscape Personality Test</title> <!-- This will be updated by JS -->
+    <title>Personality Estimator</title> <!-- This will be updated by JS -->
     <link rel="stylesheet" href="main.css"> <!-- <-- THIS IS CRUCIAL -->
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
